<resources>
    <string name="app_name">Restaurante</string>
    <string name="slogan">Un Buen Lugar Para Compartir...!!!</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="nivel_de_seguridad">Nivel de Seguridad</string>
    <string name="comuna">Comuna</string>
    <string name="dirección">Dirección</string>
    <string name="confirmar_contraseña">Confirmar Contraseña</string>
    <string name="contraseña">Contraseña</string>
    <string name="n_mero_de_tel_fono">Número de Teléfono</string>
    <string name="nombres_y_apellidos">Nombres y Apellidos</string>
    <string name="mail">Mail</string>
    <string name="ingresar">INGRESAR</string>
    <string name="quienes_somos">Quienes Somos</string>
    <string name="servicio_a_domicilio_nretiro_en_local">Servicio a Domicilio\nRetiro en Local</string>
    <string name="bienvenido_a">Bienvenido (a)</string>
    <string name="cont_ctanos">Contáctanos</string>
    <string name="reservar_mesa_npedir_en_l_nea">Reservar Mesa\nPedir en Línea</string>
    <string name="nombre_usuario">nombre_usuario</string>
    <string name="procesos">Procesos</string>

    <string-array name="tipos_usuarios">
        <item>Creador</item>
        <item>Propietario</item>
        <item>Gerente</item>
        <item>Administrador</item>
        <item>Cajero</item>
        <item>Jefe de Cocina</item>
        <item>Cocinero</item>
        <item>BarTender</item>
        <item>Garzón</item>
        <item>Público en General</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="open">Open</string>
    <string name="close">close</string>
    <string name="lista_de_pedidos">Lista de pedidos</string>
    <string name="hacer_pedido">Hacer pedido</string>

</resources>