<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_pantalla"
    tools:context=".Registrarse">

    <LinearLayout
        android:id="@+id/linear1"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <com.rengwuxian.materialedittext.MaterialEditText

            android:id="@+id/edtTelefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/n_mero_de_tel_fono"
            android:inputType="phone"
            android:text=""
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textSize="20sp"
            app:met_baseColor="@android:color/white"
            app:met_floatingLabel="highlight"
            app:met_maxCharacters="9"
            app:met_minCharacters="9"
            app:met_primaryColor="@android:color/white"
            app:met_singleLineEllipsis="true" />

        <com.rengwuxian.materialedittext.MaterialEditText

            android:id="@+id/edtNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nombres_y_apellidos"
            android:inputType="text"
            android:text=""
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textSize="20sp"
            app:met_baseColor="@android:color/white"
            app:met_floatingLabel="highlight"
            app:met_maxCharacters="50"
            app:met_primaryColor="@android:color/white"
            app:met_singleLineEllipsis="true" />

        <com.rengwuxian.materialedittext.MaterialEditText

            android:id="@+id/edtContraseña"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contraseña"
            android:inputType="textPassword"
            android:text=""
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textSize="20sp"
            app:met_baseColor="@android:color/white"
            app:met_floatingLabel="highlight"
            app:met_maxCharacters="50"
            app:met_primaryColor="@android:color/white"
            app:met_singleLineEllipsis="true" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:text="@string/nivel_de_seguridad" />

        <com.rengwuxian.materialedittext.MaterialEditText

            android:id="@+id/edtConfirmarContraseña"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirmar_contraseña"
            android:inputType="textPassword"
            android:text=""
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textSize="20sp"
            app:met_baseColor="@android:color/white"
            app:met_floatingLabel="highlight"
            app:met_maxCharacters="50"
            app:met_primaryColor="@android:color/white"
            app:met_singleLineEllipsis="true" />

        <com.rengwuxian.materialedittext.MaterialEditText

            android:id="@+id/edtDireccion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dirección"
            android:inputType="text"
            android:text=""
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textSize="20sp"
            app:met_baseColor="@android:color/white"
            app:met_floatingLabel="highlight"
            app:met_maxCharacters="50"
            app:met_primaryColor="@android:color/white"
            app:met_singleLineEllipsis="true" />

        <com.rengwuxian.materialedittext.MaterialEditText

            android:id="@+id/edtComuna"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/comuna"
            android:inputType="text"
            android:text=""
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textSize="20sp"
            app:met_baseColor="@android:color/white"
            app:met_floatingLabel="highlight"
            app:met_maxCharacters="50"
            app:met_primaryColor="@android:color/white"
            app:met_singleLineEllipsis="true" />

        <com.rengwuxian.materialedittext.MaterialEditText

            android:id="@+id/edtMail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/mail"
            android:inputType="textWebEmailAddress"
            android:text=""
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textSize="20sp"
            app:met_baseColor="@android:color/white"
            app:met_floatingLabel="highlight"
            app:met_maxCharacters="50"
            app:met_primaryColor="@android:color/white"
            app:met_singleLineEllipsis="true" />

    </LinearLayout>

    <Button
        android:id="@+id/btnRegistrarse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        android:layout_margin="8dp"
        android:background="@android:color/black"
        android:text="REGISTRARSE"
        android:textColor="@android:color/white"
        android:textSize="20sp" />


</RelativeLayout>