<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_pantalla"
    tools:context=".tipos_usuarios.PublicoGeneral">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="135dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2">

        <TextView
            android:id="@+id/bienvenidos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/bienvenido_a"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:textAlignment="center"
            android:gravity="center"
            android:id="@+id/nombreUsuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/nombre_usuario"
            android:textColor="@android:color/white"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="@+id/bienvenidos"
            app:layout_constraintStart_toStartOf="@+id/bienvenidos"
            app:layout_constraintTop_toBottomOf="@+id/bienvenidos">

        </TextView>

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="421dp"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="137dp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.65">

        <ImageView

            android:id="@+id/reservas"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_margin="20dp"
            android:foregroundGravity="center"
            android:src="@drawable/icon_reservas_red"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtreservar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/reservar_mesa_npedir_en_l_nea"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/txtdelivery"
            app:layout_constraintEnd_toEndOf="@+id/reservas"
            app:layout_constraintStart_toStartOf="@+id/reservas" />

        <ImageView
            android:id="@+id/delivery"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_margin="20dp"
            android:foregroundGravity="center"
            android:src="@drawable/icon_delivery_red"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/txtdelivery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/servicio_a_domicilio_nretiro_en_local"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="@+id/delivery"
            app:layout_constraintEnd_toEndOf="@+id/delivery"
            app:layout_constraintStart_toStartOf="@+id/delivery" />

        <ImageView

            android:id="@+id/quienes_somos"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_margin="20dp"
            android:foregroundGravity="center"
            android:src="@drawable/icon_nestro_equipo_red"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/reservas"/>

        <TextView
            android:id="@+id/txtquienes_somos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/quienes_somos"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/txtcontactanos"
            app:layout_constraintEnd_toEndOf="@+id/quienes_somos"
            app:layout_constraintStart_toStartOf="@+id/quienes_somos" />

        <ImageView
            android:id="@+id/contactanos"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_margin="20dp"
            android:foregroundGravity="center"
            android:src="@drawable/icon_contactanos_red"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/delivery" />

        <TextView
            android:id="@+id/txtcontactanos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/cont_ctanos"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="@+id/contactanos"
            app:layout_constraintEnd_toEndOf="@+id/contactanos"
            app:layout_constraintStart_toStartOf="@+id/contactanos" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.15">

        <ImageView
            android:id="@+id/icon_logo_sulcan"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:foregroundGravity="center"
            android:src="@drawable/logoapp3"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>